removed PMD error
SVN-Revision: 10626